# xorg-editres

./: .cvsignore  .gitignore  Editres-color.ad  Editres.ad  Makefile.am  actions.c  autogen.sh  comm.c  configure.ac  editres.c  editres.man  editresP.h  geometry.c  handler.c  setvalues.c  svpopup.c  utils.c  widgets.c  wtree.c
man/: editres.man
